--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,29 @@
+# Dependencies
 node_modules/
+
+# Database files
+data/
+*.sqlite
+*.db
+
+# System files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Environment
+.env.local
+.env.*.local
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
